2006-03-09  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/fs-ecos.c: Generalise the check for broken ARM compilers
	and add the MIPS compiler as also being broken.

2005-08-03  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/jffs2_1.c: Include <stdio.h> to stop compiler warning.

2005-07-30  Andrew Lunn  <andrew.lunn@ascom.ch>

	* Merge to public MTD

2005-02-25  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/fs-ecos.c (jffs2_truncate_file): Correctly truncate a file
	when opening it with O_TRUNC. Test case from Knud Woehler.

2005-02-08  Estelle HAMMACHE <estelle.hammache@st.com>

	* src/fs-ecos.c 
	* src/dir-ecos.c: Fixed the sign of the return codes in various
	places. iput the inode only after we have finished with
	it etc.
	
2005-01-22  Andrew Lunn  <andrew.lunn@ascom.ch>

	* Merge from public MTD.
	
2004-11-14  Per Hedblom  <perhedblom@abem.se>
            Andrew Lunn  <andrew.lunn@ascom.ch> 
	
 	* src/os-ecos.h: Added gc tread support
 	* src/fs-ecos.c: Removed some includes
 	* cdl/jffs2.cdl: Added gc thread support
	* tests/jffs2_3.c: New text to exersise the garbage collect code.
	
2004-12-13  John Dallaway  <jld@ecoscentric.com>

	* tests/fileio1.c: Rename to jffs2_1.c. eCos test names should be
	unique.
	* tests/fseek1.c: Rename to jffs2_2.c.
	* cdl/jffs2.cdl: Build the renamed tests.

2004-12-10  Per Hedblom  <per.hedblom@abem.se>

	* src/fs-ecos.c: Use filesystem locking not file locking otherwise
	the node cache can be corrupted by multiple operations on
	different files at the same time.

2004-11-11  Andrew Lunn <andrew.lunn@ascom.ch>

	* Merge from public MTD.
	
2004-11-11  Andrew Lunn <andrew.lunn@ascom.ch>

	* src/build.c: Removed Oyvind Harboe's patch from 2004-04-19 
	since it was rejected upstream.
	
2004-10-20  Per Hedblom  <perhedblom@abem.se>

	* src/fs-ecos.c (jffs2_open): Call iput on dir node if
	jffs2_create fails.
	* src/fs-ecos.c (jffs2_umount): use jffs2_free_full_dirent instead
	of free.
