@@ -253,6 +253,19 @@ cdl_package CYGPKG_FS_JFFS2 {
              the set of global flags if present."
      }
 
+     cdl_option CYGPKG_FS_JFFS2_RET_DIRENT_DTYPE {
+         display "Support for fileio's struct dirent d_type field"
+         flavor  bool
+         default_value 0
+         active_if CYGPKG_FILEIO_DIRENT_DTYPE
+         description   "
+             This option controls whether the JFFS2 filesystem supports 
+             setting fileio's struct dirent d_type field.
+             If this option is enabled, d_type will be set. Otherwise, 
+             nothing will be done, d_type's value will be zero because 
+             fileio already sets it."
+     }
+
     # ----------------------------------------------------------------
     # Tests
 
